change some website

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <a href="#resources" class="footer-nav__link">Resources</a>
         </p>
         <div class="social-media">
-          <a href="https://github.com/ThisIsShawn" target="_blank" class="social-media__icon">
+          <a href="https://github.com/BoyanLiuu" target="_blank" class="social-media__icon">
             <i class="fab fa-github"></i>
           </a>
         </div>
